monitoring/controllers/base/kube-prom-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-Ingress-nginx
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: grf.utobong.me
      http:
        paths:
          - backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
